# collectSubLeagueList

./: .gitignore  CLAUDE.md  data.db  data.db-journal  generate_inp.py  inp.txt  inp_23.txt  inp_25.txt  main.py  pyproject.toml  standard_format_sample.csv
models/: __init__.py  base.py  database.py  js_data_raw.py  match.py  match_basic.py  standings.py  task.py  team.py
pages/: __init__.py  base_page.py  batch_import_page.py  data_crawl_page.py  data_management_page.py  input_management_page.py  input_page.py
pages/utils/: format_match_output.py  format_output.py
utils/: __init__.py  path_helper.py
