[project]
name = "collectsubleaguelistlast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8.10"
dependencies = [
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.0.3",
    "parsel>=1.9.1",
    "pyinstaller>=6.15.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.43",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
